[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "token-bucket-carousel"
version = "0.1.0"
description = ""
authors = ["Barrington Haynes <barrington@littledog.co>"]
readme = "README.md"
packages = [
    { include = "tbc" }
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"
boto3 = "^1.28.61"
redis = {extras = ["hiredis"], version = "^5.0.1"}
pytest-asyncio = "^0.21.1"
boto3-stubs = {extras = ["dynamodb"], version = "^1.28.62"}
moto = {extras = ["dynamodb"], version = "^4.2.5"}
fakeredis = {extras = ["lua"], version = "^2.19.0"}

[tool.poetry.group.dynamodb]
optional = true

[tool.poetry.group.dynamodb.dependencies]
boto3 = "^1.28.61"

[tool.poetry.group.redis]
optional = true

[tool.poetry.group.redis.dependencies]
redis = {extras = ["hiredis"], version = "^5.0.1"}

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
